# MyGPT

./: main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
data/: chatbot_memory.db  langgraph_checkpoints.sqlite  langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal
src/: app.py
src/agent/: agent.py
src/database/: database.py
src/rag/: rag.py
src/tools/: tools.py
templates/: index.html
